# balatrobench

./: .editorconfig  .envrc.example  .gitignore  .mdformat.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  RESPONSIVE_DESIGN.md  about.html  community.html  config.js  index.html  package-lock.json  package.json  playwright.config.js  pyproject.toml  robots.txt  script.js  submit.html  tailwind.config.ts  upload.py
.claude/: settings.json
.github/: release-please-config.json
.github/workflows/: code-quality.yml  deploy-pages.yml  release-please.yml  test.yml
.mux/: init  mcp.jsonc  tool_post
data/: benchmarks  leaderboard.json
data/benchmarks/v0.2.0/default/: cerebras-gpt-oss-120b.json  cerebras-qwen3-235b.json  leaderboard.json
data/benchmarks/v0.3.0/default/: leaderboard.json
data/benchmarks/v0.3.0/default/cerebras/: gpt-oss-120b.json  qwen-3-235b-a22b-thinking-2507.json
data/benchmarks/v0.3.0/default/groq/: openai--gpt-oss-20b.json
data/benchmarks/v0.4.0/default/: leaderboard.json
data/benchmarks/v0.4.0/default/cerebras/: gpt-oss-120b.json  qwen-3-235b-a22b-instruct-2507.json  qwen-3-235b-a22b-thinking-2507.json
data/benchmarks/v0.4.0/default/groq/: openai--gpt-oss-20b.json
data/benchmarks/v0.6.0/default/: leaderboard.json
data/benchmarks/v0.6.0/default/cerebras/: gpt-oss-120b.json  qwen-3-235b-a22b-instruct-2507.json  qwen-3-235b-a22b-thinking-2507.json  qwen-3-32b.json
data/benchmarks/v0.7.0/default/: leaderboard.json
data/benchmarks/v0.7.0/default/openai/: gpt-oss-120b.json  gpt-oss-20b.json
data/benchmarks/v0.7.0/default/qwen/: qwen3-235b-a22b-thinking-2507.json
data/benchmarks/v0.8.1/default/: leaderboard.json
data/benchmarks/v0.8.1/default/anthropic/: claude-sonnet-4.json
data/benchmarks/v0.8.1/default/google/: gemini-2.5-pro.json
data/benchmarks/v0.8.1/default/openai/: gpt-5.json  gpt-oss-120b.json  gpt-oss-20b.json
data/community/20250826_180521_RedDeck_s1_OOOO155/: config.json  stats.json
data/community/20250826_185432_RedDeck_s1_OOOO155/: config.json  stats.json
data/community/v0.4.0/default/: leaderboard.json
data/community/v0.4.0/default/cerebras/: gpt-oss-120b.json  (+2 more)
data/community/v0.8.0/default/: leaderboard.json
data/community/v0.8.1/default/: leaderboard.json
data/strategies/: aggressive-joker-synergy.json  conservative-money-management.json  high-card-meta-exploitation.json
data/strategies/default/: TOOLS.json
js/: app.js
site/: about.html  community.html  config.js  index.html  robots.txt  script.js  sitemap.xml
site/assets/: quotes.json
src/: App.tsx  index.css
src/balatrobench/: __init__.py  analyzer.py  cli.py  enums.py  extractor.py  models.py  source.py  writer.py
src/components/: HeroSection.tsx  Leaderboard.tsx  Navigation.tsx  StatsCard.tsx
src/pages/: Analytics.tsx  ApiAccess.tsx  Community.tsx  Index.tsx  NotFound.tsx  OfficialBenchmark.tsx  SubmitRun.tsx
tests/: charts.spec.js  conftest.py  data-loading.spec.js  interactive.spec.js  navigation.spec.js  responsive.spec.js
tests/balatrobench/: conftest.py
tests/balatrobench/integration/: __init__.py  test_analysis_pipeline.py  test_full_benchmark.py
tests/balatrobench/unit/: test_analyzer.py  test_cli.py  test_enums.py  test_extractor.py  test_models.py  test_writer.py
tests/integration/: test_analysis_pipeline.py  test_full_benchmark.py
tests/site/: charts.spec.js  data-loading.spec.js  helpers.js  navigation.spec.js  responsive.spec.js
tests/unit/: __init__.py  test_analyzer.py  test_extractor.py  test_models.py  test_writer.py
(+7 files in other folders)
