[project]
name = "balatrobench"
version = "1.0.0"
description = "Benchmark analysis and visualization for BalatroLLM"
readme = "README.md"
authors = [{ name = "S1M0N38", email = "bertolottosimone@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["httpx>=0.28.1", "tqdm>=4.67.1"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.13",
]

[project.scripts]
balatrobench = "balatrobench.cli:main"

[project.urls]
Homepage = "https://coder.github.io/balatrobench/"
Repository = "https://github.com/coder/balatrobench"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.extend-select = ["I"]
lint.task-tags = ["FIX", "TODO", "HACK", "WARN", "PERF", "NOTE", "TEST"]

[dependency-groups]
dev = ["ruff>=0.14.10", "ty>=0.0.5"]
