[project]
name = "balatrobench"
version = "1.0.0"
description = "Benchmark analysis and visualization for BalatroLLM"
readme = "README.md"
authors = [{ name = "S1M0N38", email = "bertolottosimone@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["httpx>=0.28.1", "tqdm>=4.67.1"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.13",
]

[project.scripts]
balatrobench = "balatrobench.cli:main"

[project.urls]
Homepage = "https://coder.github.io/balatrobench/"
Repository = "https://github.com/coder/balatrobench"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.extend-select = ["I"]
lint.task-tags = ["FIX", "TODO", "HACK", "WARN", "PERF", "NOTE", "TEST"]

[dependency-groups]
test = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0"]
dev = [
  "commitizen>=4.11.0",
  "mdformat>=0.7.22,<0.8.0",
  "mdformat-footnote>=0.1.2",
  "mdformat-frontmatter>=2.0.8",
  "mdformat-gfm>=1.0.0",
  "mdformat-gfm-alerts>=2.0.0",
  "mdformat-mkdocs>=5.1.1",
  "mdformat-simple-breaks>=0.0.1",
  "ruff>=0.14.10",
  "ty>=0.0.9",
]
